fix the issue where the user name in the Users page was misaligned in the table

--- a/static/style.css
+++ b/static/style.css
@@ -217,7 +217,7 @@ nav {
     border: 5px solid goldenrod;
 }
 
-a,
+
 h1 {
     display: inline-block;
     padding: 10px 20px;
@@ -229,22 +229,26 @@ h1 {
 }
 
 a {
-    padding: 0;
     font-family: cursive;
+    text-decoration: none;
+    color: white;
+    transition: background-color 0.3s ease;
 }
 
 .UserInfo {
-    margin: 0;
-    padding: 0;
-    text-align: center;
+    font-family: cursive;
     text-decoration: none;
-    color: black;
+    color: white;
     transition: background-color 0.3s ease;
-    background-color: #c9dcdf;
+    text-align: center;
 }
 
 h1 {
     padding-left: 350px;
+}
+
+h3 {
+    text-align: center;
 }
 
 footer {
@@ -292,6 +296,7 @@ h1 {
     margin: 0;
     padding-left: 340px;
 }
+
 
 
   
